# scheduled-poweroff-daemon

./: CMakeLists.txt  LICENSE  Makefile  README.md  install-ubuntu.sh
config/: local.sheduledpoweroffdaemon.conf  scheduled-poweroff-client.desktop  scheduled-poweroff.conf  scheduled-poweroff.service
shared/: translations.txt
src/: configure.h.in  scheduled-poweroff-client.cpp  scheduled-poweroff-daemon.cpp  scheduled-poweroff-send
